docs/evidence/mandate-17/drill-prep-2026-07-30/05-netpol-prometheus-access.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: techx-infrastructure-app:networking.k8s.io/NetworkPolicy:techx-tf3/prometheus-access
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"techx-infrastructure-app:networking.k8s.io/NetworkPolicy:techx-tf3/prometheus-access"},"name":"prometheus-access","namespace":"techx-tf3"},"spec":{"egress":[{"ports":[{"port":53,"protocol":"UDP"},{"port":53,"protocol":"TCP"}],"to":[{"namespaceSelector":{"matchLabels":{"kubernetes.io/metadata.name":"kube-system"}},"podSelector":{"matchLabels":{"k8s-app":"kube-dns"}}}]},{" [...]
  creationTimestamp: "2026-07-16T04:43:22Z"
  finalizers:
  - networking.k8s.aws/resources
  generation: 10
  name: prometheus-access
  namespace: techx-tf3
  resourceVersion: "9000554"
  uid: 29dd3a02-04a4-407b-951b-ea019309cb55
spec:
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
  - ports:
    - port: 9153
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
  - ports:
    - port: 443
      protocol: TCP
    to:
    - ipBlock:
        cidr: 172.20.0.1/32
    - ipBlock:
        cidr: 10.0.0.0/16
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: grafana
    - podSelector:
        matchLabels:
          app: aiops-engine
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: opentelemetry-collector
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: otel-gateway
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: observability-system
      podSelector:
        matchLabels:
          app.kubernetes.io/name: otel-node-agent
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: jaeger
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: argo-rollouts
    ports:
    - port: 9090
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
  policyTypes:
  - Ingress
  - Egress
